# duckduckgo-search-cli

./: .cargoignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CHANGELOG.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  Cross.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  INVERSIONS.md  INVERSIONS.pt-BR.md  NO_CI.md  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  build.rs  deny.toml  llms-full.txt  llms.pt-BR.txt  llms.txt  rust-toolchain.toml
.cargo/: config.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  release.yml
benches/: decompress_bench.rs  extraction_bench.rs  latency_config.rs  pre_flight_latency.rs  tracing_overhead_bench.rs  zero_cause_bench.rs
config/: selectors.toml
docs/: AGENTS-GUIDE.md  AGENTS-GUIDE.pt-BR.md  AGENTS.md  AGENTS.pt-BR.md  AGENT_RULES.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  INSTALL-WINDOWS.md  INSTALL-WINDOWS.pt-BR.md  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  TESTING.md  TESTING.pt-BR.md  gaps.md
docs/decisions/: 0002-anti-bot-detector-overhaul-v0-7-8.md  0003-pre-flight-scheduler-v0-7-10.md  0004-zero-cause-classification-v0-8-0.md  0005-http-decompression-v0-8-0.md  0006-stealth-shell-classification-v0-8-0.md  0007-chrome-primary-transport-v0-8-0.md  0008-reqwest-rustls-v0-8-6.md  0009-headed-xvfb-private-v0-8-7.md  0010-news-vertical-v0-8-9.md  0011-deep-research-news-dual-v0-8-9.md  0012-cli-ergonomia-v0-9-0.md  0013-macos-windows-headed-native-v0-9-1.md  0014-chromiumoxide-enable-automation-client-hints-v0-9-2.md  0015-macos-windows-headless-new-v0-9-3.md  0016-chrome-only-universal-v0-9-4.md  0017-browser-lifecycle-one-shot-v0-9-6.md  0018-agent-ready-multi-canal-dual-clean-v0-9-8.md  0019-e2e-gaps-news-timeout-probe-meta-v0-9-9.md  0020-chrome-profile-disk-oneshot-v1-0-0.md  0021-rustls-aws-lc-sole-provider.md  0022-no-synthetic-fingerprint-spoof.md  0023-wire-pt-bc-english-deserialize-aliases.md
docs/schemas/: README.md  config.schema.json  deep-research-output.schema.json  error-response.schema.json  multi-search-output.schema.json  ndjson-event.schema.json  news-result.schema.json  probe-deep-output.schema.json  probe-output.schema.json  search-metadata.schema.json  search-output.schema.json  search-result.schema.json
examples/: ddg_class_watch.rs  decompress_demo.rs  pre_flight.rs  zero_cause_demo.rs
scripts/: check-windows-toolchain.ps1  detect-timeout-wrapper.sh  install-windows.ps1  pre-publish-gate.sh
skill/duckduckgo-search-cli-en/: SKILL.md  eval-queries.json
skill/duckduckgo-search-cli-en/evals/: queries.json
skill/duckduckgo-search-cli-pt/: SKILL.md  eval-queries.json
skill/duckduckgo-search-cli-pt/evals/: queries.json
skills/duckduckgo-search-cli-en/: SKILL.md
skills/duckduckgo-search-cli-en/evals/: queries.json
skills/duckduckgo-search-cli-pt/: SKILL.md
skills/duckduckgo-search-cli-pt/evals/: queries.json
src/: aggregation.rs  browser.rs  chrome_policy.rs  cli.rs  concurrency.rs  config.rs  config_init.rs  content.rs  content_fetch.rs  cookie_adapter.rs  decomposition.rs  decompress.rs  deep_research.rs  endpoints.rs  error.rs  extraction.rs  http.rs  identity.rs  lib.rs  logging.rs  main.rs  output.rs  parallel.rs  paths.rs  pipeline.rs  platform.rs  probe.rs  probe_deep.rs  process_lifecycle.rs  retry.rs  search.rs  security.rs  selectors.rs  session_warmup.rs  signals.rs  synthesis.rs  tls_bootstrap.rs  types.rs  wreq_cookie_adapter.rs  zero_cause.rs
src/browser/: detect.rs  extract.rs  mod.rs  session.rs  stealth.rs  xvfb.rs
src/commands/: commands_tree.rs  completions.rs  config_cmd.rs  deep_research.rs  doctor.rs  init_config.rs  locale_cmd.rs  man.rs  mod.rs  schema_cmd.rs
src/content/: encoding.rs  http_extract.rs  mod.rs  readability.rs  ssrf.rs
src/content_fetch/: circuit.rs  enrich.rs  host.rs  mod.rs
src/error/: cli_error.rs  codes.rs  exit_codes.rs  mod.rs
src/extraction/: mod.rs  news.rs  url.rs  web.rs
src/http/: client.rs  mod.rs  profile.rs
src/i18n/: en.rs  language.rs  message.rs  mod.rs  pt_br.rs
src/output/: emit.rs  format.rs  mod.rs
src/parallel/: batch.rs  mod.rs  stream.rs
src/pipeline/: chrome.rs  failure.rs  mod.rs  queries.rs
src/process_lifecycle/: linux.rs  mod.rs  unix.rs  windows.rs
src/snapshots/: duckduckgo_search_cli__probe_deep__tests__cloudflare_markers_v0_7_10.snap
src/types/: bounded.rs  http_url.rs  ids.rs  mod.rs  selectors.rs  time.rs  wire.rs
src/validation/: limits.rs  mod.rs
tests/: e2e_cli.rs  global_flags.rs  integration_audit_gap_aud_003.rs  integration_browser_lifecycle.rs  integration_content_fetch.rs  integration_decompression.rs  integration_deep_research.rs  integration_deep_research_news.rs  integration_e2e_real_world.rs  integration_flatpak_chrome.rs  integration_news_vertical.rs  integration_parallel.rs  integration_pipeline.rs  integration_post_pipeline_invariants.rs  integration_search_retry.rs  integration_stealth_block_classification.rs  integration_troubleshooting_documentation.rs  integration_wiremock.rs
tests/fixtures/: ddg_news_serp.html  ddg_news_serp_ofuscada.html  ddg_news_serp_vazia.html  interstitial_cloudflare_anomaly_2026.html
